update travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ cache: ccache
 jobs:
   include:
     ###
-    - stage: Ubuntu 14.04 (gcc-4.8.4, cmake 3.9.2) Qt5.2.1, Debug
+    - stage: Ubuntu 14.04 (gcc-4.8.4, cmake 3.9.2) Qt 5.2.1, Debug
       os: linux
       dist: trusty
       compiler: gcc
@@ -43,7 +43,7 @@ jobs:
         - ninja -j 3
         - ninja test
 
-    - stage: Ubuntu 16.04 (gcc-5.4.0, cmake 3.12.4), Qt5.5.1, Release
+    - stage: Ubuntu 16.04 (gcc-5.4.0, cmake 3.12.4), Qt 5.5.1, Release
       os: linux
       dist: xenial
       compiler: gcc
@@ -75,7 +75,7 @@ jobs:
         - ninja test
 
 
-    - stage: Ubuntu 18.04, gcc-7.4.0, Qt5.9.5, cmake 3.10.2, Release
+    - stage: Ubuntu 18.04 (gcc-7.4.0, cmake 3.10.2), Qt 5.9.5, Release
       os: linux
       dist: bionic
       compiler: gcc
@@ -291,32 +291,33 @@ jobs:
     #     - make -j 3
 
     ###
-    - stage: macOS 10.12, clang, Qt5 & OpenCV from brew, Release
-      os: osx
-      #osx_image: xcode8.3 #uses macOS 10.12 & Xcode 8.3.3, cmake 3.6.2
-      osx_image: xcode9.2 #uses macOS 10.12 & Xcode 9.2, cmake 3.6.2
-      compiler: clang
+    ### 10/2019: this config does not work. It seems that homebrew try to rebuild too many things...
+    # - stage: macOS 10.12, clang, Qt5 & OpenCV from brew, Release
+    #   os: osx
+    #   #osx_image: xcode8.3 #uses macOS 10.12 & Xcode 8.3.3, cmake 3.6.2
+    #   osx_image: xcode9.2 #uses macOS 10.12 & Xcode 9.2, cmake 3.6.2
+    #   compiler: clang
 
-      before_install:
-        - brew update
-        - brew list
-        #- brew outdated qt || brew upgrade qt
-        - brew install qt
-        - brew list
-        - ls /usr/local/opt/
-        - export PATH=$PATH:/usr/local/opt/qt/bin
-        #- brew outdated opencv || (pip2 uninstall -y numpy && brew upgrade opencv)
-        - pip2 uninstall -y numpy && brew install opencv #see https://github.com/travis-ci/travis-ci/issues/6688
-        - brew list
+    #   before_install:
+    #     - brew update
+    #     - brew list
+    #     #- brew outdated qt || brew upgrade qt
+    #     - brew install qt
+    #     - brew list
+    #     - ls /usr/local/opt/
+    #     - export PATH=$PATH:/usr/local/opt/qt/bin
+    #     #- brew outdated opencv || (pip2 uninstall -y numpy && brew upgrade opencv)
+    #     - pip2 uninstall -y numpy && brew install opencv #see https://github.com/travis-ci/travis-ci/issues/6688
+    #     - brew list
 
-      script:
-        - cmake --version
-        - qmake --version
-        - mkdir build
-        - cd build
-        - cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_PREFIX_PATH=$(brew --prefix qt) -DBUILD_TESTING=ON
-        - make -j 3
-        - make test
+    #   script:
+    #     - cmake --version
+    #     - qmake --version
+    #     - mkdir build
+    #     - cd build
+    #     - cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_PREFIX_PATH=$(brew --prefix qt) -DBUILD_TESTING=ON
+    #     - make -j 3
+    #     - make test
 
     
     ###
