--- a/software/CMakeLists.txt
+++ b/software/CMakeLists.txt
@@ -4,4 +4,5 @@ ADD_SUBDIRECTORY(DocCreator)
 IF(BUILD_OTHER_PROGS)
   ADD_SUBDIRECTORY(DrawCCs)
   ADD_SUBDIRECTORY(GrayscaleDegradator)
+  ADD_SUBDIRECTORY(MakeFont)
 ENDIF(BUILD_OTHER_PROGS)
