correct version and uninstall executable

--- a/bundlers/win/DocCreator.nsi.in
+++ b/bundlers/win/DocCreator.nsi.in
@@ -1,6 +1,5 @@
-
 !define PRODUCT_NAME "DocCreator"
-!define PRODUCT_VERSION "1.0"
+!define PRODUCT_VERSION "@DocCreatorVersion@"
 !define PRODUCT_PUBLISHER "LaBRI"
 !define PRODUCT_WEB_SITE "http://doc-creator.labri.fr/"
 !define PRODUCT_DIR_REGKEY "Software\Microsoft\Windows\CurrentVersion\App Paths\DocCreator.exe"
@@ -71,7 +70,7 @@ Section -AdditionalIcons
     CreateDirectory "$SMPROGRAMS\$StartMenuFolder"
     CreateShortCut "$SMPROGRAMS\$StartMenuFolder\DocCreator.lnk" "$INSTDIR\programs\DocCreator.exe"
     CreateShortCut "$SMPROGRAMS\$StartMenuFolder\Website.lnk" "$INSTDIR\${PRODUCT_NAME}.url"
-    CreateShortcut "$SMPROGRAMS\$StartMenuFolder\Uninstall.lnk" "$INSTDIR\Uninstall.exe"
+    CreateShortcut "$SMPROGRAMS\$StartMenuFolder\Uninstall.lnk" "$INSTDIR\uninst.exe"
   !insertmacro MUI_STARTMENU_WRITE_END
 
 SectionEnd
