rename MakeFont in DocCreatorMakeFont and install it

--- a/software/MakeFont/CMakeLists.txt
+++ b/software/MakeFont/CMakeLists.txt
@@ -5,7 +5,7 @@ IF(POLICY CMP0063)
   CMAKE_POLICY(SET CMP0063 NEW)
 ENDIF(POLICY CMP0063)
 
-PROJECT(GrayscaleDegradator)
+PROJECT(DocCreatorMakeFont)
 SET( CMAKE_COLOR_MAKEFILE ON )
 SET( CMAKE_VERBOSE_MAKEFILE ON )
 
@@ -17,7 +17,7 @@ SET(sources
   MainWindow.cpp
   )
 
-SET( PROGNAME MakeFont )
+SET( PROGNAME DocCreatorMakeFont )
 
 SET(EXTRA_LIBS  ${QT_LIBRARIES} ${Lipsum4Qt_LIBRARIES} ${DocCreator_LIBRARIES} ${OpenCV_LIBS})
 
@@ -32,4 +32,12 @@ SET_TARGET_PROPERTIES(${PROGNAME} PROPERTIES INSTALL_RPATH "@loader_path/../lib"
 #C++11 support
 set_property(TARGET ${PROGNAME} PROPERTY CXX_STANDARD 11)
 set_property(TARGET ${PROGNAME} PROPERTY CXX_STANDARD_REQUIRED ON)
+
+
+IF(UNIX)
+  install(TARGETS ${PROGNAME} RUNTIME DESTINATION bin)
+ENDIF(UNIX)
+IF(WIN32)
+  INSTALL(TARGETS ${PROGNAME} RUNTIME DESTINATION programs COMPONENT applications)
+ENDIF(WIN32)
 
