rename MakeFont in DocCreatorMakeFont

--- a/software/CMakeLists.txt
+++ b/software/CMakeLists.txt
@@ -4,5 +4,5 @@ ADD_SUBDIRECTORY(DocCreator)
 IF(BUILD_OTHER_PROGS)
   ADD_SUBDIRECTORY(DrawCCs)
   ADD_SUBDIRECTORY(GrayscaleDegradator)
-  ADD_SUBDIRECTORY(MakeFont)
+  ADD_SUBDIRECTORY(DocCreatorMakeFont)
 ENDIF(BUILD_OTHER_PROGS)
