--- a/framework/src/Degradations/Distortion3DModel/CMakeLists.txt
+++ b/framework/src/Degradations/Distortion3DModel/CMakeLists.txt
@@ -64,6 +64,8 @@ IF(BUILD_WITH_OSMESA)
 #REM: must be available before Distortion3DCommon
 #because OpenGL.hpp will include glad/glad.h
 
+  FIND_PACKAGE(OSMesa REQUIRED)
+
   #Download GLFW library if not done already
   SET(GLFW_VERSION "3.3.2")
   SET(GLFW_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/glfw-${GLFW_VERSION}")
@@ -92,7 +94,7 @@ IF(BUILD_WITH_OSMESA)
   ADD_SUBDIRECTORY(${GLFW_DIR})
 
 
-  set(GLAD_GL_SRCS "${GLFW_DIR}/deps/glad/gl.h"
+  SET(GLAD_GL_SRCS "${GLFW_DIR}/deps/glad/gl.h"
             "${GLFW_DIR}/deps/glad_gl.c")
 
   ADD_LIBRARY(GLAD_GL STATIC ${GLFW_DIR}/deps/glad/gl.h ${GLFW_DIR}/deps/glad_gl.c)
@@ -132,7 +134,7 @@ SET(SRCS_COMMON ${DISTORTION3D_COMMON_HEADERS} ${DISTORTION3D_COMMON_SOURCES} )
 
 SET(DISTORTION3D_COMMON_INCLUDE_DIRS "${EIGEN_INCLUDE_DIR};${LZHAM_INCLUDE_DIR};${OpenCV_INCLUDE_DIRS};${CMAKE_CURRENT_SOURCE_DIR}/src;${CMAKE_CURRENT_SOURCE_DIR}/thirdparty")
 IF(BUILD_WITH_OSMESA)
-  SET(DISTORTION3D_COMMON_INCLUDE_DIRS "${DISTORTION3D_COMMON_INCLUDE_DIRS};${GLFW_DIR}/deps")
+  SET(DISTORTION3D_COMMON_INCLUDE_DIRS "${DISTORTION3D_COMMON_INCLUDE_DIRS};${GLFW_DIR}/include;${GLFW_DIR}/deps")
 ENDIF()
 
 ADD_LIBRARY(Distortion3DCommon STATIC ${SRCS_COMMON})
@@ -140,7 +142,7 @@ TARGET_INCLUDE_DIRECTORIES(Distortion3DCommon PUBLIC ${DISTORTION3D_COMMON_INCLU
 TARGET_LINK_LIBRARIES(Distortion3DCommon IndexBufferCompression VertexCacheOptimizer ${LZHAM_LIBRARY} ${OpenCV_LIBS})
 SET_TARGET_PROPERTIES(Distortion3DCommon PROPERTIES COMPILE_FLAGS "-fPIC")
 IF(BUILD_WITH_OSMESA)
-TARGET_LINK_LIBRARIES(Distortion3DCommon IndexBufferCompression VertexCacheOptimizer ${LZHAM_LIBRARY} ${OpenCV_LIBS})
+  TARGET_LINK_LIBRARIES(Distortion3DCommon IndexBufferCompression VertexCacheOptimizer ${LZHAM_LIBRARY} ${OpenCV_LIBS})
   TARGET_COMPILE_DEFINITIONS(Distortion3DCommon PUBLIC USE_NATIVE_OSMESA=1)
   TARGET_LINK_LIBRARIES(Distortion3DCommon GLAD_GL)
 ENDIF()
