More modern cmake use.
- Avoid changing CMAKE_CXX_FLAGS, in particular for c++11, warnings and -fPIC.
- Check download status.

--- a/libs/Lipsum4Qt/CMakeLists.txt
+++ b/libs/Lipsum4Qt/CMakeLists.txt
@@ -25,21 +25,6 @@ QTX_WRAP_CPP(MOC ${Lipsum4Qt_headers})
 SET(EXTRA_LIBS  ${QT_LIBRARIES})
 
 
-#C++11 support (for all executables)
-IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
-  EXECUTE_PROCESS(COMMAND "${CMAKE_CXX_COMPILER} -dumpversion" OUTPUT_VARIABLE GCC_VERSION)
-  IF (GCC_VERSION VERSION_LESS 4.7)
-    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
-  ELSE()
-    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-  ENDIF()
-ELSEIF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-  #libc++ is required both on mac and linux
-  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -stdlib=libc++")
-ENDIF()
-#VS2013 supports c++11 without any additional flags
-
-
 # ADD_LIBRARY(${LIB_NAME} SHARED ${Lipsum4Qt_sources}  ${MOC} ${RCS} ${UI} ${Lipsum4Qt_headers})
 # SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES COMPILE_FLAGS "-DLIPSUM4QT_LIBRARY")
 
@@ -65,9 +50,12 @@ ENDIF()
 # ENDIF( APPLE )
 ADD_LIBRARY(${LIB_NAME} STATIC ${Lipsum4Qt_sources} ${Lipsum4Qt_headers} ${MOC} )
 TARGET_INCLUDE_DIRECTORIES(${LIB_NAME} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src> ${QT_QTCORE_INCLUDE_DIR} )
-
-
 TARGET_LINK_LIBRARIES(${LIB_NAME} ${QT_LIBRARIES})
+SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES
+  CXX_STANDARD 11
+  CXX_STANDARD_REQUIRED YES
+  CXX_EXTENSIONS NO
+  )
 
 
 INSTALL(FILES ${Lipsum4Qt_headers} DESTINATION include/${LIB_NAME})
