--- a/software/DocCreator/src/Degradations/Distortion3DModel/CMakeLists.txt
+++ b/software/DocCreator/src/Degradations/Distortion3DModel/CMakeLists.txt
@@ -36,7 +36,7 @@ IF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
   SET(glad_SRCS thirdparty/glad/src/glad.c)
   ADD_LIBRARY(glad STATIC ${glad_SRCS} ${glad_HDRS})
   TARGET_INCLUDE_DIRECTORIES(glad PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/glad/include)
-  SET_TARGET_PROPERTIES(glad PROPERTIES COMPILE_FLAGS "-fPIC")
+  SET_TARGET_PROPERTIES(glad PROPERTIES POSITION_INDEPENDENT_CODE ON) #COMPILE_FLAGS "-fPIC")
   #Build as static library to avoid visibility problems 
   SET(GLAD_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/glad/include)
   SET(GLAD_LIBRARIES "glad")
@@ -62,7 +62,7 @@ SET(surface_mesh_HDRS
 #file(GLOB_RECURSE surface_mesh_HDRS thirdparty/surface_mesh/*.h)
 ADD_LIBRARY(surface_mesh STATIC ${surface_mesh_SRCS} ${surface_mesh_HDRS})
 TARGET_INCLUDE_DIRECTORIES(surface_mesh PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/thirdparty)
-SET_TARGET_PROPERTIES(surface_mesh PROPERTIES COMPILE_FLAGS "-fPIC")
+SET_TARGET_PROPERTIES(surface_mesh PROPERTIES POSITION_INDEPENDENT_CODE ON) #COMPILE_FLAGS "-fPIC")
 #Build as static library to avoid visibility problems 
 
 
@@ -156,22 +156,16 @@ SET(DOC3D_AUX_LIBRARIES "${QT_QTMAIN_LIBRARY};${QT_LIBRARIES};${OPENGL_LIBRARIES
 # Cmake  will automatically add an RPATH to this executable which is the absolute location of libDocCreator in the build tree.
 
 
-ADD_LIBRARY(${PROJECT_NAME} STATIC  ${SRCS})
+ADD_LIBRARY(${PROJECT_NAME} STATIC ${SRCS})
 TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${DOC3D_INCLUDE_DIRS_LOCAL})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${DOC3D_AUX_LIBRARIES})
+TARGET_COMPILE_OPTIONS(${PROJECT_NAME} PRIVATE ${WARNING_FLAGS})
+SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
+  CXX_STANDARD 11
+  CXX_STANDARD_REQUIRED YES
+  CXX_EXTENSIONS NO
+  )
 
-#C++11 (for all executables)
-IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
-  EXECUTE_PROCESS(COMMAND "${CMAKE_CXX_COMPILER} -dumpversion" OUTPUT_VARIABLE GCC_VERSION)
-  IF (GCC_VERSION VERSION_LESS 4.7)
-    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
-  ELSE()
-    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-  ENDIF()
-ELSEIF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -stdlib=libc++")
-ENDIF()
-#VS2013 supports c++11 without any additional flags
 
 
 # the install RPATH for bar to find foo in the install tree.
@@ -184,18 +178,14 @@ SET(DOC3D_LIBRARIES "${DOC3D_LIBRARIES_LOCAL}" PARENT_SCOPE)
 
 IF(BUILD_OTHER_PROGS_3D)
 
-  #ADD_EXECUTABLE(testMeshAdjacentTriangles WIN32 MACOSX_BUNDLE src/testMeshAdjacentTriangles.cpp ${SRCS})
-  #TARGET_LINK_LIBRARIES(testMeshAdjacentTriangles ${QT_QTMAIN_LIBRARY} ${QT_LIBRARIES} ${OPENGL_LIBRARIES} Distortion3DCommon)
-  ##SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES COMPILE_FLAGS "${QTX_EXECUTABLE_COMPILE_FLAGS}")
-  #SET_PROPERTY(TARGET testMeshAdjacentTriangles PROPERTY CXX_STANDARD 11)
-  #SET_PROPERTY(TARGET testMeshAdjacentTriangles PROPERTY CXX_STANDARD_REQUIRED ON)
-
   ADD_EXECUTABLE(TestDoc3D WIN32 MACOSX_BUNDLE  ./test/testMeshWindow.cpp  ${SRCS})
   TARGET_INCLUDE_DIRECTORIES(TestDoc3D PRIVATE ${DOC3D_INCLUDE_DIRS_LOCAL} ${CMAKE_CURRENT_SOURCE_DIR}/src)
   TARGET_LINK_LIBRARIES(TestDoc3D ${DOC3D_LIBRARIES_LOCAL})
+  TARGET_COMPILE_OPTIONS(TestDoc3D PRIVATE ${WARNING_FLAGS})
   SET_TARGET_PROPERTIES(TestDoc3D PROPERTIES COMPILE_FLAGS "${QTX_EXECUTABLE_COMPILE_FLAGS}")
-  #SET_PROPERTY(TARGET TestDoc3D PROPERTY CXX_STANDARD 11)
-  #SET_PROPERTY(TARGET TestDoc3D PROPERTY CXX_STANDARD_REQUIRED ON)
-
+  SET_TARGET_PROPERTIES(TestDoc3D PROPERTIES CXX_STANDARD 11
+    CXX_STANDARD_REQUIRED YES
+    CXX_EXTENSIONS NO
+    )
 
 ENDIF(BUILD_OTHER_PROGS_3D)
