--- a/software/DrawCCs/CMakeLists.txt
+++ b/software/DrawCCs/CMakeLists.txt
@@ -20,19 +20,21 @@ SET(sources
   main.cpp
   )
 
-SET( PROGNAME DrawCCs )
+SET(PROGNAME DrawCCs)
 
 SET(EXTRA_LIBS  ${QT_LIBRARIES} ${Lipsum4Qt_LIBRARIES} ${DocCreator_LIBRARIES} ${OpenCV_LIBS})
 
 ADD_EXECUTABLE(${PROGNAME} ${sources} )
 TARGET_INCLUDE_DIRECTORIES(${PROGNAME} PRIVATE ${LIPSUM4QT_INCLUDE_DIRS} ${FRAMEWORK_INCLUDE_DIRS})
 TARGET_LINK_LIBRARIES(${PROGNAME} ${EXTRA_LIBS})
+TARGET_COMPILE_OPTIONS(${PROGNAME} PRIVATE ${WARNING_FLAGS})
 
 # the install RPATH for bar to find foo in the install tree.
 # if the install RPATH is not provided, the install bar will have none
 SET_TARGET_PROPERTIES(${PROGNAME} PROPERTIES INSTALL_RPATH "@loader_path/../lib")
 
-#C++11 support
-set_property(TARGET ${PROGNAME} PROPERTY CXX_STANDARD 11)
-set_property(TARGET ${PROGNAME} PROPERTY CXX_STANDARD_REQUIRED ON)
+SET_TARGET_PROPERTIES(${PROGNAME} PROPERTIES CXX_STANDARD 11
+  CXX_STANDARD_REQUIRED YES
+  CXX_EXTENSIONS NO
+  )
 
