--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,6 +91,16 @@ ENDIF(APPLE)
 SET(CMAKE_CXX_VISIBILITY_PRESET hidden)
 
 
+IF(CMAKE_BUILD_TOOL MATCHES "(msdev|devenv|nmake)")
+  # Force to always compile with W3
+  SET(WARNING_FLAGS "/W3")
+ELSEIF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU" 
+    OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang" 
+    OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Intel")
+  SET(WARNING_FLAGS -Wall -Wextra)
+ENDIF()
+
+
 
 OPTION(BUILD_ONLY_DEGRADATIONS "Build only degradations library" OFF)
 if (NOT BUILD_ONLY_DEGRADATIONS)
@@ -153,7 +163,6 @@ IF(NOT BUILD_ONLY_DEGRADATIONS)
   SET(SOFTWARE_PATH ${PROJECT_SOURCE_DIR}/software)
 
 
-  #SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
   ADD_SUBDIRECTORY(${LIPSUM4QT_PATH})
   ADD_SUBDIRECTORY(${FRAMEWORK_PATH})
 
