--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -28,11 +28,23 @@ IF(BUILD_OTHER_PROGS_3D)
 
   ADD_EXECUTABLE(convertBRSOBJ WIN32 MACOSX_BUNDLE convertBRSOBJ.cpp)
   TARGET_LINK_LIBRARIES(convertBRSOBJ Distortion3DCommon)
+  SET_TARGET_PROPERTIES(convertBRSOBJ PROPERTIES CXX_STANDARD 11
+    CXX_STANDARD_REQUIRED YES
+    CXX_EXTENSIONS NO
+    )
 
   ADD_EXECUTABLE(cleanMesh WIN32 MACOSX_BUNDLE cleanMesh.cpp)
   TARGET_LINK_LIBRARIES(cleanMesh Distortion3DCommon)
+  SET_TARGET_PROPERTIES(cleanMesh PROPERTIES CXX_STANDARD 11
+    CXX_STANDARD_REQUIRED YES
+    CXX_EXTENSIONS NO
+    )
 
   ADD_EXECUTABLE(removeTexCoords WIN32 MACOSX_BUNDLE removeTexCoords.cpp)
   TARGET_LINK_LIBRARIES(removeTexCoords Distortion3DCommon)
+  SET_TARGET_PROPERTIES(removeTexCoords PROPERTIES CXX_STANDARD 11
+    CXX_STANDARD_REQUIRED YES
+    CXX_EXTENSIONS NO
+    )
 
 ENDIF(BUILD_OTHER_PROGS_3D)
