--- a/software/DocCreator/src/Degradations/Distortion3DModel/CMakeLists.txt
+++ b/software/DocCreator/src/Degradations/Distortion3DModel/CMakeLists.txt
@@ -74,7 +74,7 @@ ENDIF()
 
 
 
-## Qt4 or Qt5
+## Qt5
 FIND_PACKAGE(QtX)
 
 #OpenGL
@@ -125,9 +125,8 @@ SET(DOC3D_SOURCES
   ./src/Mesh2SurfaceMesh.cpp
   )
 
-QTX_WRAP_CPP(DOC3D_MOC_SOURCES ${DOC3D_HEADERS})
 
-SET(SRCS ${DOC3D_HEADERS}  ${DOC3D_SOURCES} ${DOC3D_MOC_SOURCES} )
+SET(SRCS ${DOC3D_HEADERS} ${DOC3D_SOURCES})
 
 
 
