--- a/software/DocCreator/CMakeLists.txt
+++ b/software/DocCreator/CMakeLists.txt
@@ -506,12 +506,6 @@ IF(WIN32)
   set(WIN_RESOURCE_FILE adoc.rc) #for icon
 ENDIF()
 
-QTX_WRAP_CPP(MOC_LIB ${DocCreatorQ_headers})
-
-QTX_ADD_RESOURCES(RCS ${DocCreator_rcs} )
-QTX_WRAP_UI(UI ${DocCreator_ui})
-QTX_WRAP_CPP(MOC ${DocCreator_headers})
-
 
 ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src/Degradations/Distortion3DModel)
 
@@ -547,7 +541,7 @@ SET_TARGET_PROPERTIES(${LIBNAME} PROPERTIES
   CXX_EXTENSIONS NO
   )
 
-ADD_EXECUTABLE(${PROGNAME} ${DocCreator_sources} ${DocCreator_headers} ${MOC} ${RCS} ${UI} ${WIN_RESOURCE_FILE})
+ADD_EXECUTABLE(${PROGNAME} ${DocCreator_sources} ${DocCreator_headers} ${DocCreator_rcs} ${WIN_RESOURCE_FILE})
 TARGET_INCLUDE_DIRECTORIES(${PROGNAME} PRIVATE ${FRAMEWORK_INCLUDE_DIRS} ${DOC3D_INCLUDE_DIRS} $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src> ${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${Lept_INCLUDE_DIRS} ${Tesseract_INCLUDE_DIRS})
 SET_TARGET_PROPERTIES(${PROGNAME} PROPERTIES INSTALL_RPATH "${PROG_RPATH}")
 TARGET_COMPILE_OPTIONS(${PROGNAME} PRIVATE ${WARNING_FLAGS})
