--- a/software/DocCreatorMakeFont/CMakeLists.txt
+++ b/software/DocCreatorMakeFont/CMakeLists.txt
@@ -15,8 +15,6 @@ SET( CMAKE_COLOR_MAKEFILE ON )
 SET( CMAKE_VERBOSE_MAKEFILE ON )
 
 
-QTX_WRAP_CPP(MOC MainWindow.hpp)
-
 SET(sources
   main.cpp
   MainWindow.cpp
@@ -26,7 +24,7 @@ SET( PROGNAME DocCreatorMakeFont )
 
 SET(EXTRA_LIBS  ${QT_LIBRARIES} ${Lipsum4Qt_LIBRARIES} ${DocCreator_LIBRARIES} ${OpenCV_LIBS})
 
-ADD_EXECUTABLE(${PROGNAME} ${sources} ${MOC})
+ADD_EXECUTABLE(${PROGNAME} ${sources})
 TARGET_INCLUDE_DIRECTORIES(${PROGNAME} PRIVATE ${LIPSUM4QT_INCLUDE_DIRS} ${FRAMEWORK_INCLUDE_DIRS})
 TARGET_COMPILE_OPTIONS(${PROGNAME} PRIVATE ${WARNING_FLAGS})
 SET_TARGET_PROPERTIES(${PROGNAME} PROPERTIES CXX_STANDARD 11
