compile with VS2017

--- a/software/DocCreator/src/Degradations/Distortion3DModel/CMakeLists.txt
+++ b/software/DocCreator/src/Degradations/Distortion3DModel/CMakeLists.txt
@@ -31,18 +31,6 @@ project(${TARGET})
 SET(CMAKE_MACOSX_RPATH 1) 
 
 
-#glad library
-IF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
-  SET(glad_SRCS thirdparty/glad/src/glad.c)
-  ADD_LIBRARY(glad STATIC ${glad_SRCS} ${glad_HDRS})
-  TARGET_INCLUDE_DIRECTORIES(glad PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/glad/include)
-  SET_TARGET_PROPERTIES(glad PROPERTIES POSITION_INDEPENDENT_CODE ON) #COMPILE_FLAGS "-fPIC")
-  #Build as static library to avoid visibility problems 
-  SET(GLAD_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/glad/include)
-  SET(GLAD_LIBRARIES "glad")
-  #SET(GLAD_LIBRARIES "${GLAD_LIBRARIES};dl") #On Linux, to use glad, we need to link to dl
-ENDIF()
-
 #Surface_mesh library
 SET(surface_mesh_SRCS
     thirdparty/surface_mesh/IO.cpp
@@ -130,7 +118,7 @@ SET(SRCS ${DOC3D_HEADERS} ${DOC3D_SOURCES})
 
 
 
-SET(DOC3D_INCLUDE_DIRS_LOCAL "${QT_QTCORE_INCLUDE_DIR};${QT_QTGUI_INCLUDE_DIR};${QT_QTOPENGL_INCLUDE_DIR};${OPENGL_INCLUDE_DIR};${GLAD_INCLUDE_DIR};${CMAKE_CURRENT_SOURCE_DIR}/thirdparty;${CMAKE_CURRENT_SOURCE_DIR};${CMAKE_CURRENT_SOURCE_DIR}/src;${CMAKE_CURRENT_BINARY_DIR}/src;${CMAKE_CURRENT_BINARY_DIR}/../..;${EIGEN_INCLUDE_DIR}")
+SET(DOC3D_INCLUDE_DIRS_LOCAL "${QT_QTCORE_INCLUDE_DIR};${QT_QTGUI_INCLUDE_DIR};${QT_QTOPENGL_INCLUDE_DIR};${OPENGL_INCLUDE_DIR};${CMAKE_CURRENT_SOURCE_DIR}/thirdparty;${CMAKE_CURRENT_SOURCE_DIR};${CMAKE_CURRENT_SOURCE_DIR}/src;${CMAKE_CURRENT_BINARY_DIR}/src;${CMAKE_CURRENT_BINARY_DIR}/../..;${EIGEN_INCLUDE_DIR}")
 #Added "${CMAKE_CURRENT_SOURCE_DIR}/src;${CMAKE_CURRENT_BINARY_DIR}/src" for generated GLWidget.hpp compilation
 # and ";${CMAKE_CURRENT_BINARY_DIR}/../.." to be able to still do : #include "Degradations/Distortion3DModel/src/GLWidget.hpp"
 
@@ -147,7 +135,7 @@ SET(DOC3D_INCLUDE_DIRS "${DOC3D_INCLUDE_DIRS_LOCAL}" PARENT_SCOPE)
 
 ADD_DEFINITIONS(-DSRC_DIR="${CMAKE_CURRENT_SOURCE_DIR}") #PROJECT_SOURCE_DIR}")
 
-SET(DOC3D_AUX_LIBRARIES "${QT_QTMAIN_LIBRARY};${QT_LIBRARIES};${OPENGL_LIBRARIES};${GLAD_LIBRARIES};surface_mesh;Distortion3DCommon;${DocCreator_LIBRARIES}")
+SET(DOC3D_AUX_LIBRARIES "${QT_QTMAIN_LIBRARY};${QT_LIBRARIES};${OPENGL_LIBRARIES};surface_mesh;Distortion3DCommon;${DocCreator_LIBRARIES}")
 
 
 # Cf http://www.kitware.com/blog/home/post/510
