--- a/framework/src/Degradations/Distortion3DModel/CMakeLists.txt
+++ b/framework/src/Degradations/Distortion3DModel/CMakeLists.txt
@@ -113,6 +113,7 @@ IF(BUILD_WITH_OSMESA)
 
   ADD_SUBDIRECTORY(${GLFW_DIR})
 
+  MESSAGE("DEBUUUUUGGGG2")
 
   SET(GLAD_GL_SRCS "${GLFW_DIR}/deps/glad/gl.h"
             "${GLFW_DIR}/deps/glad_gl.c")
@@ -120,10 +121,44 @@ IF(BUILD_WITH_OSMESA)
   ADD_LIBRARY(GLAD_GL STATIC ${GLFW_DIR}/deps/glad/gl.h ${GLFW_DIR}/deps/glad_gl.c)
   TARGET_INCLUDE_DIRECTORIES(GLAD_GL PUBLIC ${GLFW_DIR}/deps)
   
+ELSE()
+
+  #glad library
+  IF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
+    SET(glad_SRCS thirdparty/glad/src/glad.c)
+    ADD_LIBRARY(GLAD_GL STATIC ${glad_SRCS} ${glad_HDRS})
+    TARGET_INCLUDE_DIRECTORIES(GLAD_GL PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/glad/include)
+    SET_TARGET_PROPERTIES(GLAD_GL PROPERTIES POSITION_INDEPENDENT_CODE ON) #COMPILE_FLAGS "-fPIC")
+    #Build as static library to avoid visibility problems 
+    SET(GLAD_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/glad/include)
+    SET(GLAD_LIBRARIES "glad")
+    #SET(GLAD_LIBRARIES "${GLAD_LIBRARIES};dl") #On Linux, to use glad, we need to link to dl
+  ENDIF()
+
 ENDIF()
 
 
+SET(DISTORTION3D_MESH_HEADERS
+  ./src/Mesh.hpp
+  ./src/brs.hpp
+  ./src/obj.hpp
+)
+SET(DISTORTION3D_MESH_SOURCES
+  ./src/Mesh.cpp
+  ./src/brs.cpp
+  ./src/obj.cpp
+)
 
+SET(DISTORTION3D_MESH_INCLUDE_DIRS "${LZHAM_INCLUDE_DIR};${CMAKE_CURRENT_SOURCE_DIR}/src;${CMAKE_CURRENT_SOURCE_DIR}/thirdparty")
+ADD_LIBRARY(Distortion3DMesh STATIC ${DISTORTION3D_MESH_HEADERS} ${DISTORTION3D_MESH_SOURCES})
+TARGET_INCLUDE_DIRECTORIES(Distortion3DMesh PUBLIC ${DISTORTION3D_MESH_INCLUDE_DIRS})
+TARGET_LINK_LIBRARIES(Distortion3DMesh IndexBufferCompression VertexCacheOptimizer ${LZHAM_LIBRARY})
+TARGET_COMPILE_OPTIONS(Distortion3DMesh PRIVATE ${WARNING_FLAGS})
+SET_TARGET_PROPERTIES(Distortion3DMesh PROPERTIES POSITION_INDEPENDENT_CODE ON) #COMPILE_FLAGS "-fPIC")
+SET_TARGET_PROPERTIES(Distortion3DMesh PROPERTIES CXX_STANDARD 11
+  CXX_STANDARD_REQUIRED YES
+  CXX_EXTENSIONS NO
+  )
 
 
 SET(DISTORTION3D_COMMON_HEADERS
@@ -133,9 +168,6 @@ SET(DISTORTION3D_COMMON_HEADERS
   ./src/GLObject.hpp
   ./src/OpenGL.hpp
   ./src/Shader.hpp
-  ./src/Mesh.hpp
-  ./src/brs.hpp
-  ./src/obj.hpp
   ./src/shader_simple.hpp
   ./src/shader_background.hpp
 )
@@ -145,21 +177,18 @@ SET(DISTORTION3D_COMMON_SOURCES
   ./src/GLObject.cpp
   ./src/GLMesh.cpp
   ./src/Shader.cpp
-  ./src/Mesh.cpp
-  ./src/brs.cpp
-  ./src/obj.cpp
 )
 
-SET(SRCS_COMMON ${DISTORTION3D_COMMON_HEADERS} ${DISTORTION3D_COMMON_SOURCES} )
+
 
 SET(DISTORTION3D_COMMON_INCLUDE_DIRS "${EIGEN_INCLUDE_DIR};${LZHAM_INCLUDE_DIR};${OpenCV_INCLUDE_DIRS};${CMAKE_CURRENT_SOURCE_DIR}/src;${CMAKE_CURRENT_SOURCE_DIR}/thirdparty")
 IF(BUILD_WITH_OSMESA)
   SET(DISTORTION3D_COMMON_INCLUDE_DIRS "${DISTORTION3D_COMMON_INCLUDE_DIRS};${GLFW_DIR}/include;${GLFW_DIR}/deps")
 ENDIF()
 
-ADD_LIBRARY(Distortion3DCommon STATIC ${SRCS_COMMON})
+ADD_LIBRARY(Distortion3DCommon STATIC ${DISTORTION3D_COMMON_HEADERS} ${DISTORTION3D_COMMON_SOURCES})
 TARGET_INCLUDE_DIRECTORIES(Distortion3DCommon PUBLIC ${DISTORTION3D_COMMON_INCLUDE_DIRS})
-TARGET_LINK_LIBRARIES(Distortion3DCommon IndexBufferCompression VertexCacheOptimizer ${LZHAM_LIBRARY} ${OpenCV_LIBS})
+TARGET_LINK_LIBRARIES(Distortion3DCommon Distortion3DMesh ${OpenCV_LIBS})
 TARGET_COMPILE_OPTIONS(Distortion3DCommon PRIVATE ${WARNING_FLAGS})
 SET_TARGET_PROPERTIES(Distortion3DCommon PROPERTIES POSITION_INDEPENDENT_CODE ON) #COMPILE_FLAGS "-fPIC")
 SET_TARGET_PROPERTIES(Distortion3DCommon PROPERTIES CXX_STANDARD 11
@@ -167,9 +196,14 @@ SET_TARGET_PROPERTIES(Distortion3DCommon PROPERTIES CXX_STANDARD 11
   CXX_EXTENSIONS NO
   )
 IF(BUILD_WITH_OSMESA)
-  TARGET_LINK_LIBRARIES(Distortion3DCommon IndexBufferCompression VertexCacheOptimizer ${LZHAM_LIBRARY} ${OpenCV_LIBS})
+  TARGET_LINK_LIBRARIES(Distortion3DCommon Distortion3DMesh VertexCacheOptimizer ${OpenCV_LIBS})
   TARGET_COMPILE_DEFINITIONS(Distortion3DCommon PUBLIC USE_NATIVE_OSMESA=1)
   TARGET_LINK_LIBRARIES(Distortion3DCommon GLAD_GL)
+ELSE()
+  IF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
+    TARGET_LINK_LIBRARIES(Distortion3DCommon GLAD_GL)
+  ENDIF()
+
 ENDIF()
 
 
