--- a/software/DocCreator/CMakeLists.txt
+++ b/software/DocCreator/CMakeLists.txt
@@ -48,7 +48,7 @@ IF(BUILD_TESSERACT)
   message(STATUS "Will download and build leptonica and tesseract from sources")
 
   SET(LEPTONICA_VERSION 1.79.0)
-  SET(TESSERACT_VERSION 411)
+  SET(TESSERACT_VERSION 41) #library suffixe
   SET(TESSERACT_ARCHIVE_VERSION 4.1.1)
   SET(LEPTONICA_SRC_DIR "${PROJECT_SOURCE_DIR}/thirdparty/leptonica-${LEPTONICA_VERSION}")
   SET(TESSERACT_SRC_DIR "${PROJECT_SOURCE_DIR}/thirdparty/tesseract-${TESSERACT_ARCHIVE_VERSION}")
@@ -111,10 +111,6 @@ IF(BUILD_TESSERACT)
     SET(TESSERACT_LIBRARY "${PROJECT_BINARY_DIR}/tesseract/lib/${CMAKE_STATIC_LIBRARY_PREFIX}tesseract${CMAKE_STATIC_LIBRARY_SUFFIX}")
   ELSE(NOT MSVC AND NOT MINGW)
 
-    SET(LEPTONICA_VERSION 1.74.4)
-    SET(TESSERACT_VERSION 305)
-    #TODO: these version numbers should be extracted automatically...
-
     #set(MY_DEFINITION 
     #  $<$<CONFIG:Debug>:definition_for_debug>
     #  $<$<CONFIG:RelWithDebInfo>:definition_for_rel_with_debug>
@@ -128,7 +124,7 @@ IF(BUILD_TESSERACT)
       #mono-config, e.g., ninja
       IF("${CMAKE_BUILD_TYPE}" STREQUAL "Debug" OR
          "${CMAKE_BUILD_TYPE}" STREQUAL "RelWithDebugInfo")
-	set(DEBUG_EXT "d")
+	       set(DEBUG_EXT "d")
       ENDIF()
     ENDIF()
     
@@ -145,7 +141,7 @@ IF(BUILD_TESSERACT)
   ExternalProject_Add(leptonica
     URL ${LEPTONICA_SRC_DIR}
     PREFIX ${PROJECT_BINARY_DIR}/leptonica
-    CMAKE_ARGS -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_INSTALL_PREFIX=${PROJECT_BINARY_DIR}/leptonica -DSTATIC=ON -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER} -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}
+    CMAKE_ARGS -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_INSTALL_PREFIX=${PROJECT_BINARY_DIR}/leptonica -DSTATIC=ON -DSW_BUILD=OFF -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER} -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}
     BUILD_BYPRODUCTS ${LEPTONICA_LIBRARY}
     )
 
