--- a/framework/src/Degradations/Distortion3DModel/CMakeLists.txt
+++ b/framework/src/Degradations/Distortion3DModel/CMakeLists.txt
@@ -149,9 +149,8 @@ SET(DISTORTION3D_MESH_SOURCES
   ./src/obj.cpp
 )
 
-SET(DISTORTION3D_MESH_INCLUDE_DIRS "${LZHAM_INCLUDE_DIR};${CMAKE_CURRENT_SOURCE_DIR}/src;${CMAKE_CURRENT_SOURCE_DIR}/thirdparty")
 ADD_LIBRARY(Distortion3DMesh STATIC ${DISTORTION3D_MESH_HEADERS} ${DISTORTION3D_MESH_SOURCES})
-TARGET_INCLUDE_DIRECTORIES(Distortion3DMesh PUBLIC ${DISTORTION3D_MESH_INCLUDE_DIRS})
+TARGET_INCLUDE_DIRECTORIES(Distortion3DMesh PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src PRIVATE "${LZHAM_INCLUDE_DIR};${CMAKE_CURRENT_SOURCE_DIR}/thirdparty")
 TARGET_LINK_LIBRARIES(Distortion3DMesh IndexBufferCompression VertexCacheOptimizer ${LZHAM_LIBRARY})
 TARGET_COMPILE_OPTIONS(Distortion3DMesh PRIVATE ${WARNING_FLAGS})
 SET_TARGET_PROPERTIES(Distortion3DMesh PROPERTIES POSITION_INDEPENDENT_CODE ON) #COMPILE_FLAGS "-fPIC")
