build Degradator when needed

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,6 +1,5 @@
 
 IF(BUILD_OTHER_PROGS)
-  IF(BUILD_WITH_OSMESA)
 
     SET(STAINIMAGES_DATA_SRC_DIRECTORY ${CMAKE_SOURCE_DIR}/data/Image/stainImages/images)
     SET(PHANTOMPATTERNS_DATA_SRC_DIRECTORY ${CMAKE_SOURCE_DIR}/data/Image/phantomPatterns)
@@ -8,8 +7,12 @@ IF(BUILD_OTHER_PROGS)
     SET(MESHES_DATA_SRC_DIRECTORY ${CMAKE_SOURCE_DIR}/data/Mesh)
     CONFIGURE_FILE(paths.hpp.in ${CMAKE_CURRENT_BINARY_DIR}/paths.hpp @ONLY)
     
-    ADD_EXECUTABLE(DocCreatorDegradator WIN32 MACOSX_BUNDLE degradator.cpp)
+    ADD_EXECUTABLE(DocCreatorDegradator degradator.cpp)
     TARGET_INCLUDE_DIRECTORIES(DocCreatorDegradator PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
+    SET_TARGET_PROPERTIES(DocCreatorDegradator PROPERTIES CXX_STANDARD 11
+      CXX_STANDARD_REQUIRED YES
+      CXX_EXTENSIONS NO
+      )
     TARGET_LINK_LIBRARIES(DocCreatorDegradator DocCreatorDegradations)
 
     IF(UNIX)
@@ -19,7 +22,6 @@ IF(BUILD_OTHER_PROGS)
       INSTALL(TARGETS ${PROGNAME} RUNTIME DESTINATION programs COMPONENT applications)
     ENDIF(WIN32)
     
-  ENDIF()
 ENDIF()
 
 
