Add RotationDegradation Qt wrapper

--- a/software/DocCreator/CMakeLists.txt
+++ b/software/DocCreator/CMakeLists.txt
@@ -32,6 +32,7 @@ SET(
   src/Degradations/GrayCharacterDegradationModelQ.cpp
   src/Degradations/HoleDegradationQ.hpp
   src/Degradations/PhantomCharacterQ.hpp
+  src/Degradations/RotationDegradationQ.hpp
   src/Degradations/ShadowBindingQ.hpp
 )
 
@@ -43,6 +44,7 @@ SET(
   src/Degradations/GrayCharacterDegradationModelQ.cpp
   src/Degradations/HoleDegradationQ.cpp
   src/Degradations/PhantomCharacterQ.cpp
+  src/Degradations/RotationDegradationQ.cpp
   src/Degradations/ShadowBindingQ.cpp
 )
 
